--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Developer Portfolio</title>
+  <title>Engineer Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
   <link
     rel="stylesheet"
@@ -30,7 +30,7 @@
       <div class="chat-messages" id="chat-messages">
         <div class="chat-message bot">
           <div class="message-content">
-            Hi there! I'm Jane's AI assistant. How can I help you today?
+            Hi there! I'm Mihirs's AI assistant. How can I help you today?
           </div>
         </div>
       </div>
