--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mihr Mohite • AIML & Physics Enthusiast | Developer</title>
-  <meta name="description" content="Personal portfolio of Mihr Mohite, an AIML and Physics enthusiast, showcasing projects in embedded systems, machine learning, and software development." />
-  <meta name="keywords" content="Mihr Mohite, AIML, machine learning, physics, developer, portfolio, Lidar, LoRa, SLAM, deep learning, MIT-WPU" />
-  <link rel="icon" href="/path/to/your/favicon.png" type="image/png" /> <meta property="og:title" content="Mihr Mohite • AIML & Physics Enthusiast | Developer" />
-  <meta property="og:description" content="Explore Mihr Mohite's portfolio featuring projects in AIML, IoT, Robotics, and Software Engineering." />
+  <title>Mihir Mohite • AIML & Physics Enthusiast | Developer</title>
+  <meta name="description" content="Personal portfolio of Mihir Mohite, an AIML and Physics enthusiast, showcasing projects in embedded systems, machine learning, and software development." />
+  <meta name="keywords" content="Mihir Mohite, AIML, machine learning, physics, developer, portfolio, Lidar, LoRa, SLAM, deep learning, MIT-WPU" />
+  <link rel="icon" href="/path/to/your/favicon.png" type="image/png" /> <meta property="og:title" content="Mihir Mohite • AIML & Physics Enthusiast | Developer" />
+  <meta property="og:description" content="Explore Mihir Mohite's portfolio featuring projects in AIML, IoT, Robotics, and Software Engineering." />
   <meta property="og:image" content="/path/to/your/og-image.jpg" /> <meta property="og:url" content="https://your-netlify-site-url.netlify.app" /> <meta name="twitter:card" content="summary_large_image" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet"
@@ -17,7 +17,7 @@
 </head>
 <body class="light-theme"> <header>
     <nav class="navbar" role="navigation">
-      <div class="logo">Mihr Mohite<span class="accent-dot">.</span></div>
+      <div class="logo">Mihir Mohite<span class="accent-dot">.</span></div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#experience">Experience</a></li>
@@ -36,7 +36,7 @@
   <section id="hero" class="hero-section">
     <div class="hero-content">
       <span class="hero-greeting">Hello, I'm</span>
-      <h1>Mihr Mohite</h1>
+      <h1>Mihir Mohite</h1>
       <p class="hero-tagline">AIML & Physics Enthusiast | Developer</p>
       <p class="hero-description">Building innovative solutions at the intersection of Artificial Intelligence, Embedded Systems, and Physics.</p>
       <div class="hero-buttons">
@@ -55,8 +55,8 @@
           <span class="dot yellow"></span>
           <span class="dot green"></span>
         </div>
-        <pre class="code-content"><code>const mihr = {
-  name: "Mihr Mohite",
+        <pre class="code-content"><code>const Mihir = {
+  name: "Mihir Mohite",
   focus: ["AIML", "Physics", "Development"],
   skills: ["Python", "MATLAB", "C++", "ML/DL", "IoT"],
   goal: "Innovative Problem Solving"
@@ -70,7 +70,7 @@
     <h2>About Me</h2>
     <div class="about-content">
       <div class="about-image">
-        <img src="/path/to/your/profile-photo.jpg" alt="Mihr Mohite" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover; border: 3px solid var(--primary-color);">
+        <img src="/path/to/your/profile-photo.jpg" alt="Mihir Mohite" style="width: 200px; height: 200px; border-radius: 50%; object-fit: cover; border: 3px solid var(--primary-color);">
         <div class="about-social">
            <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
           <a href="https://linkedin.com/in/yourlinkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -310,7 +310,7 @@
   <footer>
     <div class="footer-content">
       <div class="footer-logo">
-        Mihr Mohite<span class="accent-dot">.</span>
+        Mihir Mohite<span class="accent-dot">.</span>
       </div>
       <p class="footer-tagline">AIML & Physics Enthusiast | Developer</p>
       <div class="footer-nav">
@@ -324,7 +324,7 @@
          <a href="https://github.com/yourusername" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://linkedin.com/in/yourlinkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
         <a href="mailto:youremail@example.com"><i class="fas fa-envelope"></i></a> </div>
-      <p class="copyright">&copy; 2025 Mihr Mohite. All rights reserved.</p> </div>
+      <p class="copyright">&copy; 2025 Mihir Mohite. All rights reserved.</p> </div>
   </footer>
 
   <div class="chat-widget">
@@ -333,7 +333,7 @@
     </button>
     <div class="chat-modal" id="chat-modal" style="display: none;">
       <div class="chat-header">
-        <h3>Ask about Mihr</h3>
+        <h3>Ask about Mihir</h3>
         <button id="close-chat" aria-label="Close chat">
           <i class="fas fa-times"></i>
         </button>
@@ -341,7 +341,7 @@
       <div class="chat-messages" id="chat-messages">
         <div class="chat-message bot">
           <div class="message-content">
-            Hi there! I'm an AI assistant. Ask me anything about Mihr Mohite's skills, projects, or experience based on this portfolio.
+            Hi there! I'm an AI assistant. Ask me anything about Mihir Mohite's skills, projects, or experience based on this portfolio.
           </div>
         </div>
         </div>
